--- a/src/main/resources/fxml/CreateSection.fxml
+++ b/src/main/resources/fxml/CreateSection.fxml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -14,21 +8,18 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane stylesheets="@../styles/styles.css" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.swp.scheduler.CreateSectionController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="405.0" prefWidth="626.0" styleClass="background-panel" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.swp.scheduler.CreateSectionController">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="400.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
       <Text fill="WHITE" layoutX="121.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Create a new Section">
          <font>
             <Font name="System Bold" size="36.0" />
          </font>
       </Text>
-      <Group layoutX="17.0" layoutY="26.0" />
-      <Button fx:id="createButton" layoutX="251.0" layoutY="339.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="112.0" text="Create Section" AnchorPane.leftAnchor="251.0" AnchorPane.rightAnchor="237.0" AnchorPane.topAnchor="339.0" />
+      <Button fx:id="createButton" layoutX="218.0" layoutY="339.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="139.0" text="Create Section" AnchorPane.leftAnchor="218.0" AnchorPane.rightAnchor="243.0" AnchorPane.topAnchor="339.0" />
       <Group layoutX="307.0" layoutY="273.0">
          <children>
             <Label text="Enter End Time" textFill="WHITE">
@@ -52,15 +43,15 @@
       <Group layoutX="104.0" layoutY="207.0">
          <children>
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="33.0" layoutX="-2.0" layoutY="18.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="393.0" />
-            <RadioButton layoutX="12.0" layoutY="26.0" mnemonicParsing="false" selected="true" text="Monday">
+            <RadioButton layoutX="12.0" layoutY="26.0" mnemonicParsing="false" selected="true" styleClass="radiobutton-small" text="Monday">
                <toggleGroup>
                   <ToggleGroup fx:id="WeekDay" />
                </toggleGroup>
             </RadioButton>
-            <RadioButton layoutX="90.0" layoutY="27.0" mnemonicParsing="false" text="Tuesday" toggleGroup="$WeekDay" />
-            <RadioButton layoutX="164.0" layoutY="27.0" mnemonicParsing="false" text="Wednesday" toggleGroup="$WeekDay" />
-            <RadioButton layoutX="255.0" layoutY="27.0" mnemonicParsing="false" text="Thursday" toggleGroup="$WeekDay" />
-            <RadioButton layoutX="332.0" layoutY="26.0" mnemonicParsing="false" text="Friday" toggleGroup="$WeekDay" />
+            <RadioButton layoutX="90.0" layoutY="27.0" mnemonicParsing="false" styleClass="radiobutton-small" text="Tuesday" toggleGroup="$WeekDay" />
+            <RadioButton layoutX="164.0" layoutY="27.0" mnemonicParsing="false" styleClass="radiobutton-small" text="Wednesday" toggleGroup="$WeekDay" />
+            <RadioButton layoutX="255.0" layoutY="27.0" mnemonicParsing="false" styleClass="radiobutton-small" text="Thursday" toggleGroup="$WeekDay" />
+            <RadioButton layoutX="332.0" layoutY="26.0" mnemonicParsing="false" styleClass="radiobutton-small" text="Friday" toggleGroup="$WeekDay" />
             <Label text="Select Day of the Week" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="12.0" />
@@ -99,10 +90,5 @@
             <ListView fx:id="courseTypeList" layoutY="44.0" prefHeight="200.0" prefWidth="391.0" visible="false" />
          </children>
       </Group>
-      <Label layoutX="237.0" layoutY="56.0" text="Create A Course">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Label>
    </children>
 </AnchorPane>
