--- a/src/main/resources/fxml/TimePreferences.fxml
+++ b/src/main/resources/fxml/TimePreferences.fxml
@@ -5,16 +5,14 @@
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.Separator?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane stylesheets="@../styles/styles.css" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="400.0" minWidth="675.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.swp.scheduler.TimePreferencesController">
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="400.0" minWidth="675.0" styleClass="background-panel" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.swp.scheduler.TimePreferencesController">
    <children>
-      <Separator layoutX="209.0" layoutY="51.0" prefHeight="12.0" prefWidth="675.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="51.0" />
       <ScrollPane layoutX="41.0" layoutY="59.0" prefHeight="291.0" prefWidth="663.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="59.0">
          <content>
             <GridPane gridLinesVisible="true" prefHeight="931.0" prefWidth="674.0">
@@ -864,11 +862,10 @@
             </GridPane>
          </content>
       </ScrollPane>
-      <Separator layoutX="532.0" layoutY="375.0" prefHeight="12.0" prefWidth="732.0" AnchorPane.bottomAnchor="35.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-      <Button fx:id="nextButton" layoutX="666.0" layoutY="381.0" mnemonicParsing="false" onMouseClicked="#nextPressed" text="Next" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="25.0" />
-      <Button fx:id="backButton" layoutX="8.0" layoutY="381.0" mnemonicParsing="false" onMouseClicked="#backPressed" text="Back" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="25.0" />
+      <Button fx:id="nextButton" layoutX="656.0" layoutY="364.0" mnemonicParsing="false" onMouseClicked="#nextPressed" text="Next" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="27.0" />
+      <Button fx:id="backButton" layoutX="28.0" layoutY="364.0" mnemonicParsing="false" onMouseClicked="#backPressed" text="Back" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="28.0" />
       <Button fx:id="cancelButton" layoutX="333.0" layoutY="381.0" mnemonicParsing="false" onMouseClicked="#cancelPressed" text="Cancel" AnchorPane.bottomAnchor="10.0" />
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="-1.0" layoutY="-1.0" prefHeight="53.0" prefWidth="737.0" text="Time Preferences" textAlignment="CENTER">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="-1.0" layoutY="-1.0" prefHeight="53.0" prefWidth="737.0" styleClass="label-large" text="Time Preferences" textAlignment="CENTER">
          <font>
             <Font size="19.0" />
          </font>
