--- a/src/main/resources/styles/styles.css
+++ b/src/main/resources/styles/styles.css
@@ -3,7 +3,19 @@
 .label {
     -fx-font-size: 12px;
     -fx-font-weight: bold;
-    -fx-text-fill: #333333;
+    -fx-text-fill: #ffffff;
+    -fx-effect: dropshadow( gaussian , rgba(255,255,255,0.5) , 0,0,0,1 );
+}
+.lable-dark {
+	-fx-font-size: 12px;
+    -fx-font-weight: bold;
+    -fx-text-fill: #000000;
+    -fx-effect: dropshadow( gaussian , rgba(255,255,255,0.5) , 0,0,0,1 );
+}
+.label-large {
+	-fx-font-size: 16px;
+    -fx-font-weight: bold;
+    -fx-text-fill: #ffffff;
     -fx-effect: dropshadow( gaussian , rgba(255,255,255,0.5) , 0,0,0,1 );
 }
 
@@ -17,6 +29,9 @@
 
 .button:hover{
     -fx-base: #395bae;
+}
+.radiobutton-small {
+	-fx-font-size: 11 px;
 }
 
 /* Component specific styles */
