--- a/src/main/resources/fxml/LogIn.fxml
+++ b/src/main/resources/fxml/LogIn.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -14,7 +15,7 @@
          </font>
       </Text>
       <TextField fx:id="usernameField" layoutX="169.0" layoutY="152.0" prefHeight="25.0" prefWidth="262.0" promptText="E-mail" />
-      <TextField fx:id="passwordField" layoutX="169.0" layoutY="194.0" prefHeight="25.0" prefWidth="262.0" promptText="Password" />
+      <PasswordField fx:id="passwordField" layoutX="169.0" layoutY="194.0" prefHeight="31.0" prefWidth="262.0" promptText="Password" />
       <Button fx:id="signInButton" layoutX="152.0" layoutY="253.0" mnemonicParsing="false" onAction="#validateInfo" prefHeight="25.0" prefWidth="126.0" text="Sign In" />
       <Button layoutX="295.0" layoutY="254.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="160.0" text="Forgot Password?" />
    </children>
