--- a/src/main/resources/fxml/StudentFeedback.fxml
+++ b/src/main/resources/fxml/StudentFeedback.fxml
@@ -1,22 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="470.0" prefWidth="552.0" styleClass="background-panel" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.swp.scheduler.StudentFeedbackController">
    <children>
-      <Text fill="WHITE" layoutX="90.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Student Feedback Form" textAlignment="CENTER" wrappingWidth="356.93603515625" AnchorPane.rightAnchor="89.06396484375">
-         <font>
-            <Font name="System Bold" size="32.0" />
-         </font>
-      </Text>
-      <TextArea fx:id="messageField" layoutX="64.0" layoutY="150.0" prefWidth="423.0" promptText="Message" AnchorPane.bottomAnchor="75.0" AnchorPane.leftAnchor="64.0" AnchorPane.rightAnchor="64.0" AnchorPane.topAnchor="155.0" />
-      <TextField fx:id="subjectField" layoutX="64.0" layoutY="104.0" prefHeight="31.0" prefWidth="423.0" promptText="Subject" />
-      <Button fx:id="cancelButton" layoutX="106.0" layoutY="443.0" mnemonicParsing="false" onMouseClicked="#cancelPressed" prefHeight="31.0" prefWidth="149.0" text="Cancel" AnchorPane.bottomAnchor="20.0" />
-      <Button fx:id="submitButton" layoutX="298.0" layoutY="443.0" mnemonicParsing="false" onMouseClicked="#submitPressed" prefHeight="31.0" prefWidth="149.0" text="Submit" AnchorPane.bottomAnchor="20.0" />
+      <VBox alignment="CENTER" layoutX="105.93603515625" prefHeight="470.0" prefWidth="554.0" AnchorPane.leftAnchor="75.0" AnchorPane.rightAnchor="75.0">
+         <children>
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Student Feedback Form" textAlignment="CENTER" wrappingWidth="422.93603515625">
+               <font>
+                  <Font name="System Bold" size="32.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="15.0" />
+               </VBox.margin>
+            </Text>
+            <TextField fx:id="subjectField" layoutX="64.0" layoutY="104.0" prefHeight="31.0" prefWidth="423.0" promptText="Student ID">
+               <VBox.margin>
+                  <Insets bottom="10.0" />
+               </VBox.margin></TextField>
+            <TextField fx:id="subjectField1" layoutX="74.0" layoutY="114.0" prefHeight="31.0" prefWidth="423.0" promptText="Subject">
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin></TextField>
+            <TextArea fx:id="messageField" layoutX="64.0" layoutY="150.0" prefWidth="423.0" promptText="Message" AnchorPane.bottomAnchor="75.0" AnchorPane.leftAnchor="64.0" AnchorPane.rightAnchor="64.0" AnchorPane.topAnchor="155.0">
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin></TextArea>
+            <HBox alignment="CENTER" AnchorPane.bottomAnchor="20.0">
+               <children>
+                  <Button fx:id="cancelButton" mnemonicParsing="false" onMouseClicked="#cancelPressed" prefHeight="31.0" prefWidth="149.0" text="Cancel">
+                     <HBox.margin>
+                        <Insets right="10.0" />
+                     </HBox.margin></Button>
+                  <Button fx:id="submitButton" layoutX="298.0" layoutY="443.0" mnemonicParsing="false" onMouseClicked="#submitPressed" prefHeight="31.0" prefWidth="149.0" text="Submit" AnchorPane.bottomAnchor="20.0">
+                     <HBox.margin>
+                        <Insets left="10.0" />
+                     </HBox.margin></Button>
+               </children>
+            </HBox>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
