--- a/src/main/resources/fxml/Scheduler.fxml
+++ b/src/main/resources/fxml/Scheduler.fxml
@@ -3,7 +3,9 @@
 <?import java.lang.Double?>
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Accordion?>
-<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -16,28 +18,28 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="726.0" prefWidth="1200.0" styleClass="background-panel" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.swp.scheduler.SchedulerController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="725.0" prefWidth="1200.0" styleClass="background-panel" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.swp.scheduler.SchedulerController">
    <children>
-      <Group fx:id="sidePanel">
+      <Group fx:id="sidePanel" layoutY="29.0">
          <children>
             <AnchorPane prefHeight="725.0" prefWidth="208.0" styleClass="side-panel">
                <children>
                   <BorderPane styleClass="sp-lable">
                      <center>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Scheduler">
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Poly Schedules" textAlignment="CENTER" wrappingWidth="210.0">
                            <font>
-                              <Font name="Avenir Roman" size="32.0" />
+                              <Font size="24.0" />
                            </font>
                         </Text>
                      </center>
                   </BorderPane>
                </children>
             </AnchorPane>
-            <ScrollPane layoutY="65.0" prefHeight="660.0" prefWidth="210.0">
+            <ScrollPane layoutY="65.0" prefHeight="631.0" prefWidth="210.0">
                <content>
-                  <Accordion prefHeight="620.0" prefWidth="210.0">
+                  <Accordion prefHeight="629.0" prefWidth="208.0">
                      <panes>
-                        <TitledPane animated="false" prefHeight="568.0" prefWidth="210.0" text="Courses">
+                        <TitledPane animated="false" prefHeight="568.0" prefWidth="186.0" text="Courses">
                            <content>
                               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
                            </content>
@@ -47,7 +49,7 @@
                               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
                            </content>
                         </TitledPane>
-                        <TitledPane animated="false" text="Rooms">
+                        <TitledPane animated="false" prefHeight="582.0" prefWidth="208.0" text="Rooms">
                            <content>
                               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
                            </content>
@@ -66,7 +68,7 @@
                      <children>
                         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="629.0" layoutX="-22.0" layoutY="-33.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="682.0" x="-330.0" y="-320.0" />
                         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#79879a" height="94.0" layoutX="-352.0" layoutY="-354.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="682.0" />
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffffe0" height="32.0" layoutX="-341.0" layoutY="-288.0" onMouseClicked="#onListView" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="85.0" />
+                        <Rectangle arcHeight="5.0" arcWidth="5.0" height="32.0" layoutX="-341.0" layoutY="-288.0" onMouseClicked="#onListView" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" styleClass="tab-main" width="85.0" />
                         <Text fill="#4a4343" layoutX="-308.0" layoutY="-268.0" onMouseClicked="#onListView" strokeType="OUTSIDE" strokeWidth="0.0" text="List">
                            <font>
                               <Font name="Avenir Roman" size="13.0" />
@@ -77,18 +79,12 @@
                               <Font name="Avenir Roman" size="32.0" />
                            </font>
                         </Text>
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffffe0" height="32.0" layoutX="-245.0" layoutY="-288.0" onMouseClicked="#onCalendarView" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="85.0" />
+                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffffe0" height="32.0" layoutX="-245.0" layoutY="-288.0" onMouseClicked="#onCalendarView" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" styleClass="tab-main" width="85.0" />
                         <Text fill="#4a4343" layoutX="-229.0" layoutY="-268.0" onMouseClicked="#onCalendarView" strokeType="OUTSIDE" strokeWidth="0.0" text="Calendar">
                            <font>
                               <Font name="Avenir Roman" size="13.0" />
                            </font>
                         </Text>
-                        <Group fx:id="openSchedule" layoutX="280.0" layoutY="-286.0">
-                           <children>
-                              <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="8.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="28.0" />
-                              <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="8.0" rotate="90.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="28.0" />
-                           </children>
-                        </Group>
                      </children>
                   </Group>
                   <Group fx:id="calendarGroup" layoutX="-256.0" layoutY="-43.0">
@@ -245,7 +241,6 @@
             </Text>
          </children>
       </Group>
-      <ComboBox layoutX="760.0" layoutY="123.0" prefHeight="26.0" prefWidth="94.0" />
       <Group layoutX="260.0" layoutY="110.0">
          <children>
             <Polygon fill="#36465d" rotate="-90.0" scaleX="0.35" scaleY="0.35" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0">
@@ -274,5 +269,40 @@
             </Polygon>
          </children>
       </Group>
+      <MenuBar prefHeight="29.0" prefWidth="1200.0" styleClass="menu">
+        <menus>
+          <Menu mnemonicParsing="false" styleClass="menu" text="File">
+            <items>
+              <MenuItem mnemonicParsing="false" styleClass="menu-item" text="New" />
+                  <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Open" />
+                  <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Save" />
+                  <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Save As" />
+                  <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Import From Previous Term" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" styleClass="menu" text="Edit">
+            <items>
+              <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Add New Course" />
+                  <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Add New Section" />
+                  <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Add New Room" />
+                  <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Edit Time Preferences" />
+                  <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Delete" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" styleClass="menu" text="Window">
+            <items>
+              <MenuItem mnemonicParsing="false" styleClass="menu-item" text="View Time Preferences..." />
+                  <MenuItem mnemonicParsing="false" styleClass="menu-item" text="List View" />
+                  <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Calendar View" />
+                  <MenuItem mnemonicParsing="false" styleClass="menu-item" text="View Cohort Data..." />
+            </items>
+          </Menu>
+            <Menu mnemonicParsing="false" styleClass="menu" text="Help">
+               <items>
+                  <MenuItem mnemonicParsing="false" styleClass="menu-item" text="About" />
+               </items>
+            </Menu>
+        </menus>
+      </MenuBar>
    </children>
 </AnchorPane>
