--- a/src/main/resources/fxml/CoursePreferences.fxml
+++ b/src/main/resources/fxml/CoursePreferences.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -19,9 +20,14 @@
                         <Font name="System Bold" size="32.0" />
                      </font>
                <VBox.margin>
-                  <Insets bottom="10.0" />
+                  <Insets bottom="-10.0" />
                </VBox.margin>
                   </Text>
+            <Label styleClass="label-light" text="Current User: Professor X">
+               <VBox.margin>
+                  <Insets bottom="10.0" />
+               </VBox.margin>
+            </Label>
                   <Group>
                      <children>
                         <ComboBox fx:id="qualifiedCoursesField" layoutX="-171.0" layoutY="32.0" prefHeight="27.0" prefWidth="225.0" promptText="Course Number/Name" />
