--- a/src/main/resources/fxml/TimePreferences.fxml
+++ b/src/main/resources/fxml/TimePreferences.fxml
@@ -18,10 +18,18 @@
    <children>
       <VBox alignment="CENTER" layoutX="25.0" layoutY="59.0" prefHeight="499.0" prefWidth="787.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="-1.0" layoutY="-1.0" prefHeight="49.0" prefWidth="737.0" styleClass="page-title" text="Time Preferences" textAlignment="CENTER">
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="-1.0" layoutY="-1.0" prefHeight="32.0" prefWidth="737.0" styleClass="page-title" text="Time Preferences" textAlignment="CENTER">
                <font>
                   <Font size="19.0" />
                </font>
+               <VBox.margin>
+                  <Insets bottom="-10.0" />
+               </VBox.margin>
+            </Label>
+            <Label styleClass="label-light" text="Current User: Professor X">
+               <VBox.margin>
+                  <Insets bottom="10.0" />
+               </VBox.margin>
             </Label>
             <ScrollPane prefHeight="375.0" prefWidth="787.0">
                <content>
