--- a/src/main/resources/fxml/Scheduler.fxml
+++ b/src/main/resources/fxml/Scheduler.fxml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
 <?import java.lang.Double?>
 <?import java.lang.String?>
 <?import javafx.scene.Group?>
@@ -16,6 +10,7 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -27,7 +22,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="725.0" prefWidth="1200.0" styleClass="background-panel" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.swp.scheduler.SchedulerController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="725.0" prefWidth="1200.0" styleClass="background-panel" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.swp.scheduler.SchedulerController">
    <children>
       <MenuBar prefHeight="29.0" prefWidth="1200.0" styleClass="menu">
         <menus>
@@ -68,12 +63,6 @@
          <children>
             <AnchorPane prefHeight="725.0" prefWidth="208.0" styleClass="side-panel">
                <children>
-                  <BorderPane styleClass="sp-lable" />
-                  <Text layoutX="60.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Scheduler">
-                     <font>
-                        <Font name="Avenir Roman" size="20.0" />
-                     </font>
-                  </Text>
                   <BorderPane styleClass="sp-lable">
                      <center>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="label-bold" text="Poly Schedules" textAlignment="CENTER" wrappingWidth="210.0">
@@ -141,7 +130,7 @@
                         </Text>
                         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="8.0" layoutX="280.0" layoutY="-332.0" onMouseClicked="#onAddSection" rotate="91.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="28.0" />
                         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="8.0" layoutX="280.0" layoutY="-332.0" onMouseClicked="#onAddSection" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="28.0" />
-                        <TextField fx:id="filterField" layoutX="-339.0" layoutY="-341.0" />
+                        <TextField fx:id="filterField" layoutX="-352.0" layoutY="-384.0" />
                      </children>
                   </Group>
                   <Group fx:id="calendarGroup" layoutX="-256.0" layoutY="-43.0" visible="false">
