--- a/src/main/resources/fxml/Scheduler.fxml
+++ b/src/main/resources/fxml/Scheduler.fxml
@@ -110,7 +110,7 @@
             </ScrollPane>
          </children>
       </Group>
-      <Group fx:id="calendar1" layoutY="19.0">
+      <Group fx:id="calendar1" layoutY="36.0">
          <children>
             <AnchorPane fx:id="calendarAnchor1" layoutX="232.0" layoutY="46.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="548.0" prefWidth="634.0">
                <children>
@@ -139,9 +139,7 @@
                               <Font name="Avenir Roman" size="13.0" />
                            </font>
                         </Text>
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="8.0" layoutX="280.0" layoutY="-332.0" onMouseClicked="#onAddSection" rotate="91.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="28.0" />
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="8.0" layoutX="280.0" layoutY="-332.0" onMouseClicked="#onAddSection" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="28.0" />
-                        <TextField fx:id="filterField" layoutX="-339.0" layoutY="-341.0" />
+                        <TextField fx:id="filterField" layoutX="-352.0" layoutY="-391.0" />
                      </children>
                   </Group>
                   <Group fx:id="calendarGroup" layoutX="-256.0" layoutY="-43.0" visible="false">
@@ -235,7 +233,7 @@
       </Group>
       <Group layoutX="260.0" layoutY="110.0">
          <children>
-            <Polygon fill="#36465d" rotate="-90.0" scaleX="0.35" scaleY="0.35" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0">
+            <Polygon fill="#36465d" layoutY="5.0" rotate="-90.0" scaleX="0.35" scaleY="0.35" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0">
               <points>
                 <Double fx:value="-50.0" />
                 <Double fx:value="40.0" />
@@ -249,7 +247,7 @@
       </Group>
       <Group layoutX="825.0" layoutY="120.0">
          <children>
-            <Polygon fill="#36465d" layoutX="54.0" layoutY="-10.0" rotate="90.0" scaleX="0.35" scaleY="0.35" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0">
+            <Polygon fill="#36465d" layoutX="54.0" layoutY="-5.0" rotate="90.0" scaleX="0.35" scaleY="0.35" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0">
                <points>
                   <Double fx:value="-50.0" />
                   <Double fx:value="40.0" />
