--- a/src/main/resources/fxml/CreateSection.fxml
+++ b/src/main/resources/fxml/CreateSection.fxml
@@ -68,7 +68,7 @@
                   <Insets bottom="20.0" />
                </VBox.margin>
             </HBox>
-            <Button fx:id="createButton" layoutX="218.0" layoutY="339.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="139.0" text="Create Section" AnchorPane.leftAnchor="218.0" AnchorPane.rightAnchor="243.0" AnchorPane.topAnchor="339.0" />
+            <Button fx:id="createButton" layoutX="218.0" layoutY="339.0" onAction="#CreateSection" mnemonicParsing="false" prefHeight="27.0" prefWidth="139.0" text="Create Section" AnchorPane.leftAnchor="218.0" AnchorPane.rightAnchor="243.0" AnchorPane.topAnchor="339.0" />
       
          </children>
       </VBox>
